Add ManagerPick entity and service; implement scraping and retrieval of manager picks, enhance unit tests.